base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: cats
spec:
  host: bellas-cats.apps.edu-lab-2.mdlwr.se
  port:
    targetPort: 80-8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: ""
    name: cats
    weight: null
status: {}
